test/libsolidity/syntaxTests/parsing/single_function_param_trailing_comma.sol
contract test {
	function(uint a,) {}
}
// ----
// ParserError: (32-33): Unexpected trailing comma in parameter list.
